--- a/src/components/cart_ver/cart_ver.scss
+++ b/src/components/cart_ver/cart_ver.scss
@@ -37,7 +37,7 @@
     }
 
     &__total {
-        @include flex(end, center);
+        @include flex(flex-end, center);
         flex-direction: column;
         font-size: 1rem;
 
