--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,9 @@ $body-bg: #ffffff;
 $main-color: #CD853F;
 $text-color: #000000;
 
+$white-color: #ffffff;
+$black-color: #000000;
+
 $box-shadow: rgb(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
 $header-height: 8rem;
