--- a/src/scss/_breakpoint.scss
+++ b/src/scss/_breakpoint.scss
@@ -7,7 +7,7 @@
 };
 
 @mixin tablet {
-    @media only screen and (max-width: $tablet-width) {
+    @media only screen and (max-width: $tablet-width) and (min-width: 601px) {
         @content
     }
 };
