--- a/src/pages/shop/shop.scss
+++ b/src/pages/shop/shop.scss
@@ -107,3 +107,15 @@
         }
     }
 }
+
+.no-product {
+    width: 100%;
+    height: 200px;
+    @include flex(center, center);
+    flex-direction: column;
+    font-size: 2rem;
+
+    i {
+        font-size: 4rem;
+    }
+}
