--- a/Client/src/pages/register/register.scss
+++ b/Client/src/pages/register/register.scss
@@ -2,13 +2,14 @@
 
 .register {
     width: 100%;
-    height: 80vh;
-    @include flex(center, center);
+    height: auto;
+    margin: 20px 0;
+    @include flex(flex-start, center);
 
     &__container {
         //border: 1px solid #ccc;
-        width: 350px;
-        height: 500px;
+        width: 400px;
+        height: auto;
 
         &__wrapper {
             @include flex(center, center);
@@ -27,10 +28,20 @@
 
             &__form {
                 width: 80%;
-                @include flex(center, center);
+                @include flex(flex-start, center);
                 flex-direction: column;
 
-                &__username, &__password, &__email {
+                &__error {
+                    font-size: 0.8rem;
+                    font-weight: 500;
+                    color: red;
+                }
+
+                & > * ~ * {
+                    margin-top: 10px;
+                }
+
+                &__username, &__password, &__email, &__phone {
                     width: 100%;
                     border: 1px solid #ccc;
                     border-radius: 2px;
@@ -39,15 +50,41 @@
                     padding: 0 10px;
                 }
 
+                &__flname {
+                    width: 100%;
+                    @include flex(center, center);
+
+                    &__hug {
+                        @include flex(flex-start, flex-start);
+                        width: auto;
+                        flex-direction: column;
+
+                        &__fname, &__lname {
+                            width: 94%;
+                            border: 1px solid #ccc;
+                            border-radius: 2px;
+                            height: 35px;
+                            background-color: #fafafa;
+                            padding: 0 10px;
+                        }
+
+                        &__lname {
+                            margin-left: 10px;
+                        }
+                        &__error {
+                            font-size: 0.8rem;
+                            font-weight: 500;
+                            color: red;
+                        }
+                    }
+                }
+
                 &__btn-register {
+                    margin-top: 20px;
                     width: 100%;
                     height: 30px;
                     @include flex(center, center);
                     font-size: 1rem;
-                }
-
-                & > * ~ * {
-                    margin-top: 10px;
                 }
             }
 
@@ -65,11 +102,14 @@
                 &__or {
                     margin: 0 20px;
                     font-weight: 600;
+                    color: #999;
                 }
             }
 
             &__with {
+                cursor: pointer;
                 margin-top: 20px;
+                font-size: 1rem;
                 @include flex(center, center);
                 width: 80%;
                 img {
@@ -80,6 +120,19 @@
             &__forgot-pw {
                 font-size: 0.9rem;
                 margin: 20px 0;
+            }
+        }
+
+        &__signup {
+            width: 100%;
+            height: 60px;
+            margin-top: 20px;
+            border: 1px solid #ccc;
+            @include flex(center, center);
+
+            &__link {
+                padding-left: 5px;
+                font-weight: 600;
             }
         }
     }
