--- a/Client/src/components/productSlide/product-slide.scss
+++ b/Client/src/components/productSlide/product-slide.scss
@@ -9,45 +9,11 @@
 .product-slide-item {
     @include flex (center, center);
     width: 100%;
-    &__wrapper {
-        @include flex (center, space-between);
-        width: 70%;
-        padding: 20px;
 
-        &__content {
-            @include flex (flex-start, center);
-            flex-direction: column;
-            flex: 1;
-            margin-left: 20px;
-
-            &__type {
-                font-size: 1.4rem;
-            }
-
-            &__title {
-                font-size: 2rem;
-                font-weight: 600;
-                margin-right: 100px;
-            }
-
-            &__overview {
-
-            }
-
-            & > * ~ * {
-                margin-top: 20px;
-            }
-        }
-
-        &__img {
-            @include flex (center, flex-end);
-
-            img { 
-                height: 400px;
-                width: 400px;
-                object-fit: contain;
-            }
-        }
+    img {
+        width: 100%;
+        height: 500px;
+        object-fit: cover;
     }
 
     @include tablet {
