--- a/Client/src/pages/register/register.scss
+++ b/Client/src/pages/register/register.scss
@@ -4,12 +4,24 @@
     width: 100%;
     height: auto;
     margin: 20px 0;
-    @include flex(flex-start, center);
+    @include flex(center, center);
+
+    &__img {
+        height: 400px;
+        width: 600px;
+        margin-right: 80px;
+
+        img {
+            height: 400px;
+            width: 400px;
+        }
+    }
 
     &__container {
         //border: 1px solid #ccc;
         width: 400px;
         height: auto;
+        padding: 20px;
 
         &__wrapper {
             @include flex(center, center);
@@ -32,7 +44,7 @@
                 flex-direction: column;
 
                 &__error {
-                    font-size: 0.8rem;
+                    font-size: 0.7rem;
                     font-weight: 500;
                     color: red;
                 }
@@ -52,7 +64,7 @@
 
                 &__flname {
                     width: 100%;
-                    @include flex(center, center);
+                    @include flex(flex-start, center);
 
                     &__hug {
                         @include flex(flex-start, flex-start);
@@ -69,10 +81,11 @@
                         }
 
                         &__lname {
-                            margin-left: 10px;
+                            //margin-left: 10px;
+                            width: 100%;
                         }
                         &__error {
-                            font-size: 0.8rem;
+                            font-size: 0.7rem;
                             font-weight: 500;
                             color: red;
                         }
@@ -123,17 +136,31 @@
             }
         }
 
-        &__signup {
+        &__signin {
             width: 100%;
             height: 60px;
             margin-top: 20px;
             border: 1px solid #ccc;
-            @include flex(center, center);
+            @include flex(center, space-around);
+            padding: 0 10%;
 
             &__link {
                 padding-left: 5px;
                 font-weight: 600;
             }
+        }
+    }
+
+    @include tablet {
+        &__img {
+            display: none;
+        }
+    }
+
+    @include mobile {
+        font-size: 1.4rem;
+        &__img {
+            display: none;
         }
     }
 }
