--- a/Client/src/components/productSlide/product-slide.scss
+++ b/Client/src/components/productSlide/product-slide.scss
@@ -17,77 +17,14 @@
     }
 
     @include tablet {
-
-        &__wrapper {
-            @include flex (center, center);
-            flex-direction: column-reverse;
-            padding-bottom: 20px;
-
-            &__content {
-                @include flex (center, center);
-                margin: 0;
-                &__type{
-                    display: none;
-                }
-
-                &__title {
-                    margin: 0;
-                    font-size: 1rem;
-                }
-
-                &__overview {
-                    margin: 0;
-                }
-            }
-
-            &__img {
-                width: 200px;
-                height: 200px;
-                @include flex (center, center);
-                img {
-                    width: 220px;
-                    height: 220px;
-                    object-fit: contain;
-                }
-            }
+        img {
+            height: 70%;
         }
     }
 
     @include mobile {
-
-        &__wrapper {
-            @include flex (center, center);
-            flex-direction: column-reverse;
-            padding-bottom: 20px;
-            width: 80%;
-
-            &__content {
-                @include flex (center, center);
-                margin: 0;
-                &__type, &__overview {
-                    display: none;
-                }
-
-                &__title {
-                    margin: 0;
-                    font-size: 1.2rem;
-                }
-
-                &__btn {
-                    margin: 0;
-                }
-            }
-
-            &__img {
-                width: 200px;
-                height: 200px;
-                @include flex (center, center);
-                img {
-                    width: 220px;
-                    height: 220px;
-                    object-fit: contain;
-                }
-            }
+        img {
+            height: 70%;
         }
     }
 }
