--- a/Client/src/pages/home/home.scss
+++ b/Client/src/pages/home/home.scss
@@ -2,6 +2,7 @@
 
 .home {
     margin-top: 4rem;
+    margin-bottom: 4rem;
     @include mobile {
         $height-header-mobile: calc($header-height * 0.7);
         margin-top: $height-header-mobile;
