--- a/Client/src/components/footer/footer.scss
+++ b/Client/src/components/footer/footer.scss
@@ -2,8 +2,7 @@
 
 .footer {
     @include flex(center, center);
-    background-color: #000029;
-    color: #fff;
+    background-color: #FFE4C4	;
     font-size: 1.2rem;
     font-weight: 500;
 
