--- a/Client/src/components/header/header.scss
+++ b/Client/src/components/header/header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 4rem;
     font-size: 1.2rem;
-    background-color: #87CEFA;
+    background-color: #FFE4C4;
     position: fixed;
     top: 0;
     left: 0;
