--- a/Client/src/components/origin/origin.scss
+++ b/Client/src/components/origin/origin.scss
@@ -42,4 +42,32 @@
 
         }
     }
+
+    @include tablet {
+
+        padding: 10px 0 10px 10px;
+        &__overview {
+            width: 50%;
+            padding: 50px 0;
+            font-size: 1.4rem;
+        }
+        &__img {
+            width: 50%;
+        }
+    }
+
+    @include mobile {
+        @include flex(center, center);
+        flex-direction: column;
+        
+        &__overview {
+            width: 80%;
+            padding: 50px 0;
+            font-size: 2rem;
+        }
+
+        &__img {
+            width: 100%;
+        }
+    }
 }
