#Product Detail ... bugs

--- a/Client/src/components/productcard/product-card.scss
+++ b/Client/src/components/productcard/product-card.scss
@@ -12,7 +12,7 @@
         &__img {
             width: 250px;
             height: 250px;
-            object-fit: contain;
+            object-fit: cover;
         }
 
         &__info {
