--- a/Client/src/pages/detailproduct/detail-product.scss
+++ b/Client/src/pages/detailproduct/detail-product.scss
@@ -82,15 +82,33 @@
                 & > * ~ * {
                     margin-left: 10px;
                 }
+            }
 
-                
+            &__quantity {
+                width: 130px;
+                height: 35px;
+                @include flex (center, space-around);
+                border: 1px solid #ccc;
+                border-radius: 50px;
+
+                &__btn-minus, &__btn-plus {
+                    width: 40px;
+                    height: 35px;
+                    cursor: pointer;
+                    border-radius: 50px;
+                }
+
+                &__number {
+                    flex: 1;
+                    @include flex (center, center);
+                }
             }
 
             &__cate {
                 @include flex (center, flex-start);
 
                 &__price {
-                    width: 110px;
+                    width: 130px;
                 }
 
                 &__price {
@@ -98,8 +116,11 @@
                 }
             }
 
-            &__desc {
-                font-size: 1rem;
+            &__note {
+                padding: 5px;
+                outline: none;
+                width: 250px;
+                height: 70px;
             }
 
             &__btn {
