--- a/Client/src/components/pagination/pagination.scss
+++ b/Client/src/components/pagination/pagination.scss
@@ -7,6 +7,7 @@
     flex-direction: column;
 
     &__page-action {
+        margin-bottom: 10px;
         &__ul {
             @include flex(center, center);
             & > * ~ * {
@@ -16,9 +17,10 @@
             &__li {
                 cursor: pointer;
                 font-size: 1rem;
+                @include flex(center, center);
 
                 &__btn-prev, &__btn-next {
-                    
+                    @include flex(center, center);
                     font-size: 1.2rem;
                     cursor: pointer;
                 }
