--- a/Client/src/components/productcard/product-card.scss
+++ b/Client/src/components/productcard/product-card.scss
@@ -1,41 +1,33 @@
 @use '../../scss/' as *;
 
 .product-card {
-    min-width: 250px;
-    @include flex (flex-start, center);
-    flex-direction: column;
-    // margin: 0 20px 20px;
+    width: 100%;
 
     &__link {
-        padding: 5px;
         box-sizing: border-box;
         &__img {
-            width: 250px;
-            height: 250px;
+            width: 100%;
+            height: 70%;
             object-fit: cover;
         }
 
         &__info {
             &__name {
-                font-size: 1rem;
+                font-size: 1.4rem;
                 font-weight: 500;
             }
 
             &__type {
-                font-size: 0.9rem;
+                font-size: 1.2rem;
             }
         }
 
         &__actions {
             @include flex (center, space-between);
             width: 100%;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding: 5px;
-            box-sizing: border-box;
     
             &__price {
-    
+                font-size: 1.4rem;
             }
         }
     }
@@ -43,5 +35,48 @@
     &:hover {
         scale: 1.1;
         // box-shadow: 0 1px 8px 0 rgba(107, 107, 107, 0.27);
+    }
+
+    @include tabletToPcLR {
+        &__link {
+            &__info {
+                &__name {
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                }
+    
+                &__type {
+                    font-size: 1.2rem;
+                }
+            }
+    
+            &__actions {
+                &__price {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+    }
+
+    @include mobile {
+        margin: 10px 0;
+        &__link {
+            &__info {
+                &__name {
+                    font-size: 1.9rem;
+                    font-weight: 500;
+                }
+    
+                &__type {
+                    font-size: 1.7rem;
+                }
+            }
+    
+            &__actions {
+                &__price {
+                    font-size: 1.8rem;
+                }
+            }
+        }
     }
 }
