--- a/Client/src/scss/_grid_system.scss
+++ b/Client/src/scss/_grid_system.scss
@@ -12,6 +12,11 @@
     margin: 0 auto;
 }
 
+.wide {
+    max-width: 1400px;
+    margin: 0 auto;
+}
+
 .row {
     display: flex;
     flex-wrap: wrap;
